
  * Automatically and safely detect and recover from dangling
    .git/annex/index.lock files, which would prevent git from
    committing to the git-annex branch, eg after a crash.
  * watcher: Detect at startup time when there is a stale .git/lock,
    and remove it so it does not interfere with the automatic
    commits of changed files.
  * addurl: Better sanitization of generated filenames.

 -- Joey Hess <joeyh@debian.org>  Thu, 03 Oct 2013 15:41:24 -0400

git-annex (4.20131002) unstable; urgency=low

  * Note that the layout of gcrypt repositories has changed, and
    if you created one you must manually upgrade it.
    See http://git-annex.branchable.com/upgrades/gcrypt/
  * webapp: Support setting up and using encrypted git repositories on
    any ssh server, as well as on rsync.net.
  * git-annex-shell: Added support for operating inside gcrypt repositories.
  * Disable receive.denyNonFastForwards when setting up a gcrypt special
    remote, since gcrypt needs to be able to fast-forward the master branch.
  * import: Preserve top-level directory structure.
  * Use cryptohash rather than SHA for hashing when no external hash program
    is available. This is a significant speedup for SHA256 on OSX, for
    example.
  * Added SKEIN256 and SKEIN512 backends.
  * Android build redone from scratch, many dependencies updated,
    and entire build can now be done using provided scripts.
  * assistant: Clear the list of failed transfers when doing a full transfer
    scan. This prevents repeated retries to download files that are not
    available, or are not referenced by the current git tree.
  * indirect, direct: Better behavior when a file is not owned by
    the user running the conversion.
  * add, import, assistant: Better preserve the mtime of symlinks,
    when when adding content that gets deduplicated.
  * Send a git-annex user-agent when downloading urls.
    Overridable with --user-agent option.