@@ -7,6 +7,8 @@ git-annex (4.20131003) UNRELEASED; urgency=low
     and remove it so it does not interfere with the automatic
     commits of changed files.
   * addurl: Better sanitization of generated filenames.
+  * Better sanitization of problem characters when generating URL and WORM
+    keys.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 03 Oct 2013 15:41:24 -0400
 
